# mac-cleaner

./: .gitignore  LICENSE  README.md  install.sh  mac_cleaner.py  pyproject.toml
tools/: ansi_to_png.py  make_screenshots.sh
